--- a/miniprogram/app.json
+++ b/miniprogram/app.json
@@ -31,6 +31,8 @@
     "van-button": "../../dist/button/index",
     "van-row": "../../dist/row/index",
     "van-col": "../../dist/col/index",
-    "van-icon": "../../dist/icon/index"
+    "van-icon": "../../dist/icon/index",
+    "van-collapse": "../../dist/collapse/index",
+    "van-collapse-item": "../../dist/collapse-item/index"
   }
 }
